Tue Dec 10 07:48:29 2013  Aman Gupta <ruby@tmm1.net>

	* vm_method.c (rb_clear_method_cache_by_class): fire
	  ruby::method-cache-clear probe on global or klass-level method cache
	  clear [Bug #9190]
	* probes.d (provider ruby): new dtrace probe
	* doc/dtrace_probes.rdoc: docs for new probe
	* test/dtrace/test_method_cache.rb: test for new probe

Tue Dec 10 06:14:11 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Remove curses from documentable directories.

Tue Dec 10 04:55:36 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/digest.rb: Deprecate OpenSSL::Digest::Digest
	  [Fixes GH-446] https://github.com/ruby/ruby/pull/446

Tue Dec 10 00:41:42 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/thread/thread.c: [DOC] add call-seq alias for Queue#enq, #<<, etc.

	* ext/thread/thread.c (Init_thread): use rb_define_alias instead of
	  rb_alias to document alias.

Mon Dec  9 20:00:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* internal.h (RCLASS_SERIAL): Add RCLASS_SERIAL as a convenience
	  accessor for RCLASS_EXT(klass)->class_serial.

	* class.c, vm_insnhelper.c, vm_method.c: Use RCLASS_SERIAL

Mon Dec  9 19:50:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c, insns.def, test/ruby/test_rubyvm.rb, vm.c, vm_core.h,
	  vm_insnhelper.c, vm_insnhelper.h, vm_method.c: Rename method_serial
	  to global_method_state and constant_serial to global_constant_state
	  after discussion with ko1.

Mon Dec  9 18:50:43 2013  Aman Gupta <ruby@tmm1.net>

	* hash.c (rb_hash_replace): fix segv on `{}.replace({})` introduced
	  in r44060 [Bug #9230] [ruby-core:58991]
	* test/ruby/test_hash.rb: regression test for above

Mon Dec  9 18:10:10 2013  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_stat): renamed from ruby_vm_stat.
	  Should not use ruby_ prefix here.

Mon Dec  9 16:13:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (wmap_size): add ObjectSpace::WeakMap#size and #length.
